Hover on mobile Fix
I am currently started fixing the after-effects caused by hovering over elements.
The ":hover" is not possible on touch/mobile devices thus creating an after-effect after the user has clicked an element.

--- a/Main.css
+++ b/Main.css
@@ -1412,6 +1412,11 @@ img
 
 
 
+@media(hover: hover)
+{}
+
+
+
 
 
 
